--- a/GameData/KerbolPlus/SarvinSystem/Shayle/Shayle.cfg
+++ b/GameData/KerbolPlus/SarvinSystem/Shayle/Shayle.cfg
@@ -3,14 +3,18 @@
     Body
     {
 		name = Shayle
-		flightGlobalsIndex = 710
-
+		cacheFile = KerbolPlus/Cache/Shayle.bin
+		Template
+		{
+            name = Eeloo
+			removePQSMods = PQSLandControl
+        }
 		Orbit
 		{
             referenceBody = Sarvin
             inclination = 20.3
-            eccentricity = 0.039
-            semiMajorAxis = 56548696
+            eccentricity = -0.1
+            semiMajorAxis = 171585059.460315
             longitudeOfAscendingNode = 55
             argumentOfPeriapsis = 0
             meanAnomalyAtEpoch = 1.1
@@ -19,7 +23,7 @@
 		}
 		Properties
 		{
-            description = This poor little moon is covered in huge craters appears to have a soft, fluffy surface. Many kerbals dreamed of Shayle as the place where the Kraken comes from. 
+            description = This poor little moon that is covered in huge craters appears to have a soft, fluffy surface. Many kerbals dreamed of Shayle as the place where the Kraken comes from. 
             radius = 100000
             geeASL = 0.1
 			rotationPeriod = 44029
@@ -29,29 +33,6 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
-			biomeMap = KerbolPlus/SarvinSystem/Shayle/PluginData/Shayle_biome.png
-
-            Biomes
-            {
-                Biome
-                {
-                    name = Impact Craters
-                    value = 40
-                    color = 255,0,0,1
-                }
-		Biome
-                {
-                    name = Superior Plains
-                    value = 10
-                    color = 255,200,0,1
-                }
-		Biome
-                {
-                    name = Inferior Plains
-                    value = 7
-                    color = 0,200,255,1
-                }
-			}				
 			ScienceValues
 			{
 				landedDataValue = 14
@@ -64,7 +45,7 @@
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 0
+			fadeStart = 90000
 			fadeEnd = 0
 
 			Material
@@ -73,140 +54,73 @@
 				normals = KerbolPlus/SarvinSystem/Shayle/Textures/Shayle_normal
 				shininess = 0
 				specular = 0,0,0,0
-
 			}
 		}
-        PQS
+         PQS
         {
-            maxQuadLengthsPerFrame = 0.03
             minLevel = 2
-            maxLevel = 12
-            minDetailDistance = 8
-
-            materialType = AtmosphericOptimized
-            Material
-            {
-                saturation = 1
-                contrast = 1.8
-                tintColor = 1.000,1.000,1.000,0.000
-
-                powerNear = 0.6
-                powerFar = 0.5
-
-                groundTexStart = 0
-                groundTexEnd = 1000
-
-                steepPower = 1.25
-                steepTexStart = 0
-                steepTexEnd = 50000
-                steepTex = BUILTIN/terrain_rock00
-                steepBumpMap = BUILTIN/RockyGround2
-                steepNearTiling = 100
-                steepTiling = 60
-
-                lowTex = BUILTIN/terrain_sand00
-                lowBumpMap = BUILTIN/SandyGround
-                lowNearTiling = 2000
-                lowMultiFactor = 100
-                lowBumpNearTiling = 2000
-                lowBumpFarTiling = 4000
-
-                midTex = BUILTIN/terrain_sand00
-                midBumpMap = BUILTIN/SandyGround
-                midNearTiling = 4000
-                midMultiFactor = 100
-                midBumpNearTiling = 4000
-                midBumpFarTiling = 4000
-
-                highTex = BUILTIN/terrain_sand00
-                highBumpMap = BUILTIN/RockyGround2
-                highNearTiling = 4000
-                highMultiFactor = 100
-                highBumpNearTiling = 8000
-                highBumpFarTiling = 4000
-
-                lowStart = 0
-                lowEnd = 0.3
-                highStart = 0.8
-                highEnd = 1
-
-                globalDensity = 0
-                fogColorRamp = BUILTIN/desert_atmogradient
-            }
+            maxLevel = 8
 
             Mods
 			{
-				VertexColorMap
-				{
-					map = KerbolPlus/SarvinSystem/Shayle/PluginData/Shayle_color.png
-					order = 500
-					enabled = true
-				}
-
 				VertexHeightMap
 				{
 					map = KerbolPlus/SarvinSystem/Shayle/PluginData/Shayle_height.png
-					offset = 0
-					deformity = 7500.0
+					offset = 100
+					deformity = 6000.0
 					scaleDeformityByRadius = false
 					order = 20
 					enabled = true
 				}
-
-
-				VertexSimplexNoiseColor
-				{
-					seed = 45
-					blend = 1.0
-					colorStart = 0.768656731,0.6996614,0.653089464,1
-					colorEnd = 0,0,0,1
-					octaves = 12.0
-					persistence = 0.5
-					frequency = 2.0
-					enabled = false
-					order = 200
-				}
-
-				HeightColorMap
-				{
-					blend = 0.7
-					order = 201
-					enabled = true
-					LandClasses
-					{
-						Class
-						{
-							name = AbyPl
-							altitudeStart = 0.0
-							altitudeEnd = 0.5
-							color = 0.0,0.0,0.0,1.0
-							lerpToNext = true
-						}
-						Class
-						{
-							name = Beach
-							altitudeStart = 0.5
-							altitudeEnd = 0.55
-							color = 0.164179087,0.164179087,0.164179087,1.0
-							lerpToNext = true
-						}
-						Class
-						{
-							name = Beach2
-							altitudeStart = 0.55
-							altitudeEnd = 1.0
-							color = 0.373134315,0.373134315,0.373134315,1.0
-							lerpToNext = false
-						}
-					}
-				}
-				AltitudeAlpha
-				{
-					atmosphereDepth = 41000
-					invert = false
-					enabled = true
-					order = 999999999
-				}
+                HeightColorMap
+                {
+                    blend = 1
+                    order = 200
+                    enabled = true
+                    LandClasses
+                    {
+                        Class
+                        {
+                            name = Depths
+                            altitudeStart = 0.0
+                            altitudeEnd = 0.2
+                            color = 0.0,0.0,0.0,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Base
+                            altitudeStart = 0.2
+                            altitudeEnd = 0.3
+                            color = 0.4,0.35,0.3,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Mid
+                            altitudeStart = 0.3
+                            altitudeEnd = 0.5
+                            color = 0.6,0.6,0.6,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = High
+                            altitudeStart = 0.5
+                            altitudeEnd = 0.7
+                            color = 0.2,0.2,0.2,1.0
+                            lerpToNext = true
+                        }
+                        Class
+                        {
+                            name = Peaks
+                            altitudeStart = 0.5
+                            altitudeEnd = 10.0	
+                            color = 0.7,0.7,0.7,1.0
+                            lerpToNext = false
+                        }
+                    }
+                }
 			}
 		}
 	}
