Pergas color change

--- a/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
@@ -64,8 +64,8 @@
 
 				Gradient
 				{
-					0.0 = 0.2,0.35,0.36,1
-					0.6 = 0.51,0.25,0.05,1
+					0.0 = 0.1,0.35,0.36,1
+					0.6 = 0.3,0.2,0.1,1
 					1.0 = 0.0196,0.0196,0.0196,1
 				}
 			}
@@ -150,7 +150,7 @@
 			{
 				VertexHeightMap
 				{
-					map = KerbolPlus/DwarfPlanets/Pergas/PluginData/Pergas_height.dds
+					map = KerbolPlus/DwarfPlanets/Pergas/PluginData/Pergas_height.png
 					offset = 500
 					deformity = 8000.0
 					scaleDeformityByRadius = false
@@ -160,8 +160,8 @@
 
 				VertexSimplexHeight
 				{
-					seed = 456456
-					deformity = 500.0
+					seed = 119431
+					deformity = 2000.0
 					octaves = 8.0
 					persistence = 0.5
 					frequency = 4.0
@@ -190,24 +190,24 @@
                         {
                             name = Base
                             altitudeStart = 0.0
-                            altitudeEnd = 0.3
+                            altitudeEnd = 0.35
                             color = 0.1,0.1,0.1,1.0
                             lerpToNext = true
                         }
                         Class
                         {
                             name = Low
-                            altitudeStart = 0.3
-                            altitudeEnd = 0.47
+                            altitudeStart = 0.35
+                            altitudeEnd = 0.4
                             color = 0.125,0.156,0.16,1.0
                             lerpToNext = true
                         }
                         Class
                         {
                             name = Mid
-                            altitudeStart = 0.47
+                            altitudeStart = 0.4
                             altitudeEnd = 0.48
-                            color = 0.2,0.35,0.36,1.0
+                            color = 0.1,0.35,0.36,1.0
                             lerpToNext = true
                         }
                         Class
@@ -215,7 +215,7 @@
                             name = High
                             altitudeStart = 0.48
                             altitudeEnd = 0.65
-                            color = 0.25,0.15,0.1,1.0
+                            color = 0.2,0.15,0.1,1.0
                             lerpToNext = true
                         }
                         Class
@@ -223,7 +223,7 @@
                             name = Peaks
                             altitudeStart = 0.65
                             altitudeEnd = 10.0	
-                            color = 0.847,0.49,0.219,1.0
+                            color = 0.8,0.84,0.85,1.0
                             lerpToNext = false
                         }
                     }
