Transition tweaks & Pergas Fix

--- a/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
@@ -57,7 +57,7 @@
 				texture = KerbolPlus/DwarfPlanets/Pergas/Textures/Pergas_color
 				normals = KerbolPlus/DwarfPlanets/Pergas/Textures/Pergas_normal
 				shininess = 0.0
-				specular = 0.1,0.1,0.1,0
+				specular = 0.0,0.0,0.0,0
 
 				rimPower = 1.6
 				rimBlend = 0.8
@@ -150,7 +150,7 @@
 			{
 				VertexHeightMap
 				{
-					map = KerbolPlus/DwarfPlanets/Pergas/PluginData/Pergas_height.png
+					map = KerbolPlus/DwarfPlanets/Pergas/PluginData/Pergas_height.dds
 					offset = 500
 					deformity = 8000.0
 					scaleDeformityByRadius = false
