--- a/GameData/KerbolPlus/DwarfPlanets/Harvest/Harvest.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Harvest/Harvest.cfg
@@ -53,7 +53,7 @@
 				texture = KerbolPlus/DwarfPlanets/Harvest/Textures/Harvest_color
 				normals = KerbolPlus/DwarfPlanets/Harvest/Textures/Harvest_normal
 				shininess = 0
-				specular = 0.1,0.1,0.1,0
+				specular = 0.0,0.0,0.0,0
 
 			}
 		}
@@ -63,7 +63,12 @@
             minLevel = 2
             maxLevel = 8
             minDetailDistance = 8
-
+			
+            Material
+            {
+                saturation = 1
+                contrast = 1.4
+            }
             Mods
 			{
 				VertexHeightMap
