--- a/GameData/KerbolPlus/DwarfPlanets/Valit/Valit.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Valit/Valit.cfg
@@ -53,7 +53,7 @@
 				texture = KerbolPlus/DwarfPlanets/Valit/Textures/Valit_color
 				normals = KerbolPlus/DwarfPlanets/Valit/Textures/Valit_normal
 				shininess = 0
-				specular = 0.1,0.1,0.1,0
+				specular = 0.0,0.0,0.0,0
 			}
 		}
         PQS
@@ -63,6 +63,11 @@
             maxLevel = 8
             minDetailDistance = 8
 
+            Material
+            {
+                saturation = 1
+                contrast = 1.2
+            }
             Mods
 			{
 				VertexHeightMap
