--- a/GameData/KerbolPlus/SarvinSystem/Shayle/Shayle.cfg
+++ b/GameData/KerbolPlus/SarvinSystem/Shayle/Shayle.cfg
@@ -65,7 +65,7 @@
 			{
 				VertexHeightMap
 				{
-					map = KerbolPlus/SarvinSystem/Shayle/PluginData/Shayle_height.png
+					map = KerbolPlus/SarvinSystem/Shayle/PluginData/Shayle_height.dds
 					offset = 100
 					deformity = 6000.0
 					scaleDeformityByRadius = false
