--- a/GameData/KerbolPlus/DwarfPlanets/Corolet/Corolet.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Corolet/Corolet.cfg
@@ -22,7 +22,7 @@
 		}
 		Properties
 		{
-            description = This little comet is very lonely and it's rarely visited due to it's difficult to reach orbit. It's particle trail can be sometimes be seen from Kerbin.  
+            description = This odd little ball of rock appears to have been captured from an encounter with the Kerbol system. Who knows what we could learn from it!
             radius = 6000
             geeASL = 0.24
 			rotationPeriod = 46134.589375
