--- a/GameData/KerbolPlus/DwarfPlanets/Harvest/Harvest.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Harvest/Harvest.cfg
@@ -23,7 +23,7 @@
 		}
 		Properties
 		{
-            description = It is thought that harvest was born from huge chunks of rock that remained after, in kerbin's past, a planet smashed into kerbin. It's also how Mun may have also formed, but that's another story.
+            description = This small world is forever chasing Kerbin, destined to never catch up to it. How lonely it must be.
             radius = 200000
             geeASL = 0.32
 			rotationPeriod = 46134.589375
