--- a/GameData/KerbolPlus/DwarfPlanets/Kralaus/Kralaus.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Kralaus/Kralaus.cfg
@@ -23,7 +23,7 @@
 		}
 		Properties
 		{
-            description = The name may sound like this dwarf planet is the home of the kracken,  but in fact it is just another dirt ball. However, although it's colored in red, it's covered with veins and flatlands that somehow reminds you of Minmus. 
+            description = Although this odd world appears to be sinister looking, the reality is that it's rather mundane. Sure is pretty though!
             radius = 198000
             geeASL = 0.55
 			rotationPeriod = 46134.589375
