--- a/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
@@ -24,7 +24,7 @@
 		}
 		Properties
 		{
-            description = This poor planetoid has an orbit close to Dres. We assume it makes Dres feel slightly less lonely.
+            description = This small yet extremely dense planet orbits very close to Dres. Perhaps in the past they were united, and separated aeons ago, but who knows for sure!
             radius = 245000
             geeASL = 1
 			rotationPeriod = 46134.589375
