--- a/GameData/KerbolPlus/DwarfPlanets/Valit/Valit.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Valit/Valit.cfg
@@ -23,7 +23,7 @@
 		}
 		Properties
 		{
-            description = This little dwarf planet was discovered by scientists while they looked for other Space potatoes like their moon. It not only very colorful, but we assume it's many Hills make it a perfect place for dirt rafting.
+            description = This beautiful orange world makes Kerbal's everywhere hungry when observing it. This has lead to astronomers everywhere using the term "Valit time" to refer to the snack time taken after observing it.
             radius = 310000
             geeASL = 0.8
 			rotationPeriod = 46134.589375
