--- a/GameData/KerbolPlus/SarvusSystem/Daphne/Daphne.cfg
+++ b/GameData/KerbolPlus/SarvusSystem/Daphne/Daphne.cfg
@@ -23,7 +23,7 @@
 		}
 		Properties
 		{
-            description = This moon is covered in large, deep cracks, that may hide water oceans beneath its crust, and eroded mountain ranges mostly covered in fluff-like white dust. Many kerbals dream about a huge yummy ocean of ice cream laying behind Daphne's surface, there could be even more than on Minmus!
+            description = This poor little moon orbit so close to it's parent gas giant that it is literally being pulled apart. Giant canyons litter the surface cause by the stress of tidal forces exerted on it.
             radius = 180000
             geeASL = 0.22
 			rotationPeriod = 181803
