--- a/GameData/KerbolPlus/SarvusSystem/Fosno/Fosno.cfg
+++ b/GameData/KerbolPlus/SarvusSystem/Fosno/Fosno.cfg
@@ -22,7 +22,7 @@
 		}
 		Properties
 		{
-            description = Fosno is the home of solar system's highest peaks that even poke beyond it's thin, low atmosphere. It has also been voted the best place in the solar system to practice the most extreme sports!
+            description = This barren moon is a stark contrast to the light, serene looking gas giant it orbits. It's dark and foreboding surface intrigues Kerbals everywhere.
             radius = 260000
             geeASL = 0.41
 			rotationPeriod = 52247
