--- a/GameData/KerbolPlus/SarvusSystem/Moonlets/S2.cfg
+++ b/GameData/KerbolPlus/SarvusSystem/Moonlets/S2.cfg
@@ -24,7 +24,7 @@
 		}
 		Properties
 		{
-            description = It is thought that this asteroid, like S-1, S-3 and S-4 are captured bodies from separate parts of the galaxy despite their similar surfaces. 
+            description = It is thought that this satellite, like the others are captured bodies from separate parts of the galaxy despite their similar appearances. 
             radius = 22000
             geeASL = 0.07
 			rotationPeriod = 28255
