--- a/GameData/KerbolPlus/SarvusSystem/Pottus/Pottus.cfg
+++ b/GameData/KerbolPlus/SarvusSystem/Pottus/Pottus.cfg
@@ -24,7 +24,7 @@
 		}
 		Properties
 		{
-            description = Due to its slightly oblate shape caused by tidal forces exerted by Sarvus, the scientists who first observed it exclaimed that they had found a space potato! Their observations about it's vegetable origins were quickly changed.
+            description = This moon appears to be highly affected by it's parent giant. It appears that the insides of this ball of rock is slowly being sucked out of the core, forming a super volcano fuelling Sarvus's atmosphere.
             radius = 240000
             geeASL = 0.24
 			rotationPeriod = 52980.8790593796
