--- a/GameData/KerbolPlus/SarvusSystem/Shay/Shay.cfg
+++ b/GameData/KerbolPlus/SarvusSystem/Shay/Shay.cfg
@@ -23,7 +23,7 @@
 		}
 		Properties
 		{
-            description = This poor little moon that is covered in huge craters appears to have a soft, fluffy surface. Many kerbals dreamed of Shay as the place where the Kraken comes from. 
+            description = This poor disfigured moon seems to be home of some extremely large impacts from aeons ago. It's large craters have long since frozen over with ice from the core of this moon.
             radius = 100000
             geeASL = 0.1
 			rotationPeriod = 44029
