--- a/GameData/KerbolPlus/SarvusSystem/Moonlets/S4.cfg
+++ b/GameData/KerbolPlus/SarvusSystem/Moonlets/S4.cfg
@@ -24,7 +24,7 @@
 		}
 		Properties
 		{
-            description = It is thought that this asteroid, like S-1, S-2 and S-3 are captured bodies from separate parts of the galaxy despite their similar surfaces. 
+            description = It is thought that this satellite, like the others are captured bodies from separate parts of the galaxy despite their similar appearances. 
             radius = 20000
             geeASL = 0.19
 			rotationPeriod = 28255
