Name change to avoid OPM confusion

--- a/GameData/KerbolPlus/SarinSystem/Daphne/Daphne.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Daphne/Daphne.cfg
@@ -2,31 +2,31 @@
 {
     Body
     {
-		name = Shay
-		cacheFile = KerbolPlus/Cache/Shay.bin
+		name = Daphne
+		cacheFile = KerbolPlus/Cache/Daphne.bin
 		Template
 		{
-            name = Eeloo
-			removePQSMods = PQSLandControl
-        }
+			name = Gilly
+			removePQSMods = PQSLandControl, PQSMod_AltitudeAlpha,PQSMod_VertexSimplexHeightAbsolute, PQSMod_VertexHeightNoise
+		}
 		Orbit
 		{
-            referenceBody = Sarvus
-            inclination = 20.3
-            eccentricity = -0.1
-            semiMajorAxis = 171585059.460315
+            referenceBody = Sarin
+            inclination = 356.7
+            eccentricity = 0
+            semiMajorAxis = 10180731.0856104
             longitudeOfAscendingNode = 55
             argumentOfPeriapsis = 0
-            meanAnomalyAtEpoch = 1.1
-            epoch = 1343.91
-            color = 0.7,0.7,0.7,1.0
+            meanAnomalyAtEpoch = 1.10000002384186
+            epoch = 1343.91003417969
+            color = 0.75,0.8,0.82,1
 		}
 		Properties
 		{
-            description = This poor disfigured moon seems to be home of some extremely large impacts from aeons ago. It's large craters have long since frozen over with ice from the core of this moon.
-            radius = 100000
-            geeASL = 0.1
-			rotationPeriod = 44029
+            description = This poor little moon orbit so close to it's parent gas giant that it is literally being pulled apart. Giant canyons litter the surface cause by the stress of tidal forces exerted on it.
+            radius = 180000
+            geeASL = 0.22
+			rotationPeriod = 181803
 			rotates = true
 			tidallyLocked = false
 			initialRotation = 0
@@ -35,37 +35,40 @@
 
 			ScienceValues
 			{
+				flyingLowDataValue = 13
+				flyingHighDataValue = 13
 				landedDataValue = 14
 				inSpaceLowDataValue = 12
 				inSpaceHighDataValue = 11
 				recoveryValue = 11
-				spaceAltitudeThreshold = 60000
+				flyingAltitudeThreshold = 2000
+				spaceAltitudeThreshold = 75000
 			}
 		}
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 90000
+			fadeStart = 0
 			fadeEnd = 0
 
 			Material
 			{
-				texture = KerbolPlus/SarvusSystem/Shay/Textures/Shay_color
-				normals = KerbolPlus/SarvusSystem/Shay/Textures/Shay_normal
+				texture = KerbolPlus/SarinSystem/Daphne/Textures/Daphne_color
+				normals = KerbolPlus/SarinSystem/Daphne/Textures/Daphne_normal
 				shininess = 0
-				specular = 0,0,0,0
+				specular = 0.00,0.00,0.00,0
 			}
 		}
-         PQS
+      PQS
         {
             minLevel = 2
-            maxLevel = 8
+            maxLevel = 10
 
             Mods
 			{
 				VertexHeightMap
 				{
-					map = KerbolPlus/SarvusSystem/Shay/PluginData/Shay_height.dds
+					map = KerbolPlus/SarinSystem/Daphne/PluginData/Daphne_height.dds
 					offset = 100
 					deformity = 6000.0
 					scaleDeformityByRadius = false
@@ -83,32 +86,32 @@
                         {
                             name = Depths
                             altitudeStart = 0.0
-                            altitudeEnd = 0.2
-                            color = 0.0,0.0,0.0,1.0
+                            altitudeEnd = 0.05
+                            color = 0.95,0.99,1.0,1.0
                             lerpToNext = true
                         }
                         Class
                         {
                             name = Base
-                            altitudeStart = 0.2
+                            altitudeStart = 0.05
                             altitudeEnd = 0.3
-                            color = 0.4,0.35,0.3,1.0
+                            color = 0.752,0.803,0.823,1.0
                             lerpToNext = true
                         }
                         Class
                         {
                             name = Mid
                             altitudeStart = 0.3
-                            altitudeEnd = 0.5
-                            color = 0.6,0.6,0.6,1.0
+                            altitudeEnd = 0.4
+                            color = 0.25,0.25,0.25,1.0
                             lerpToNext = true
                         }
                         Class
                         {
                             name = High
-                            altitudeStart = 0.5
-                            altitudeEnd = 0.7
-                            color = 0.2,0.2,0.2,1.0
+                            altitudeStart = 0.4
+                            altitudeEnd = 0.5
+                            color = 0.427,0.498,0.537,1.0
                             lerpToNext = true
                         }
                         Class
@@ -116,7 +119,7 @@
                             name = Peaks
                             altitudeStart = 0.5
                             altitudeEnd = 10.0	
-                            color = 0.7,0.7,0.7,1.0
+                            color = 0.752,0.803,0.823,1.0
                             lerpToNext = false
                         }
                     }
