--- a/GameData/KerbolPlus/SarinSystem/Fosno/Fosno.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Fosno/Fosno.cfg
@@ -10,7 +10,7 @@
 		}
 		Orbit
 		{
-            referenceBody = Sarvus
+            referenceBody = Sarin
             inclination = 7.3
             eccentricity = 0.04
             semiMajorAxis = 28548698
@@ -49,8 +49,8 @@
 
 			Material
 			{
-				texture = KerbolPlus/SarvusSystem/Fosno/Textures/Fosno_color
-				normals = KerbolPlus/SarvusSystem/Fosno/Textures/Fosno_normal
+				texture = KerbolPlus/SarinSystem/Fosno/Textures/Fosno_color
+				normals = KerbolPlus/SarinSystem/Fosno/Textures/Fosno_normal
 				shininess = 0
 				specular = 0.1,0.1,0.1,0
 
@@ -67,7 +67,7 @@
 			{
 				VertexHeightMap
 				{
-					map = KerbolPlus/SarvusSystem/Fosno/PluginData/Fosno_height.dds
+					map = KerbolPlus/SarinSystem/Fosno/PluginData/Fosno_height.dds
 					offset = 100
 					deformity = 9500.0
 					scaleDeformityByRadius = false
