--- a/GameData/KerbolPlus/SarinSystem/Moonlets/S1.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Moonlets/S1.cfg
@@ -3,8 +3,8 @@
     Body
     {
 		//name approximately from https://goo.gl/tz9xZf
-		name = S/0-S3
-		cacheFile = KerbolPlus/Cache/S3.bin
+		name = S/0-S1
+		cacheFile = KerbolPlus/Cache/S1.bin
 		Template
 		{
 			name = Minmus
@@ -12,23 +12,23 @@
 		}
 		Orbit
 		{
-            referenceBody = Sarvus
-            inclination = 9
-            eccentricity = 0.011
-            semiMajorAxis = 199792151
+            referenceBody = Sarin
+            inclination = 350
+            eccentricity = 0.09
+            semiMajorAxis = 65113158
             longitudeOfAscendingNode = 55
             argumentOfPeriapsis = 0
             meanAnomalyAtEpoch = 1.1
             epoch = 1343.91
-            color = 0.27,0.27,0.57,1.0
+            color = 0.57,0.27,0.27,1.0
 		}
 		Properties
 		{
             description = It is thought that this satellite, like the others are captured bodies from separate parts of the galaxy despite their similar appearances. 
-            radius = 18000
-            geeASL = 0.04
+            radius = 19000
+            geeASL = 0.09
 			rotationPeriod = 28255
-			initialRotation = 0
+			initialRotation = 0		
 			ScienceValues
 			{
 				landedDataValue = 13
@@ -42,10 +42,11 @@
 		{
 			Material
 			{
-				texture = KerbolPlus/SarvusSystem/Moonlets/Textures/S3_color
-				normals = KerbolPlus/SarvusSystem/Moonlets/Textures/S3_normal
+				texture = KerbolPlus/SarinSystem/Moonlets/Textures/S1_color
+				normals = KerbolPlus/SarinSystem/Moonlets/Textures/S1_normal
 				shininess = 0
 				specular = 0,0,0,0
+
 			}
 		}
         PQS
@@ -106,7 +107,7 @@
 						LandClass
 						{
 							name = Beach
-							baseColor = 0.2874157, 0.3105618, 0.835719, 1.000
+							baseColor = 0.835719, 0.3105618, 0.2874157, 1.000
 							colorNoise = 0.2303371, 0.250, 0.230, 1.000
 							colorNoiseAmount = 0.600000002980232
 							SimplexNoiseMap
@@ -171,7 +172,7 @@
 					oceanLevel = 0
 					oceanSnap = false
 					oceanStep = 0
-					seed = 418
+					seed = 599
 					terrainRidgeBalance = 0.1
 					terrainRidgesMax = 1
 					terrainRidgesMin = 0.4
