--- a/GameData/KerbolPlus/SarinSystem/Moonlets/S2.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Moonlets/S2.cfg
@@ -12,7 +12,7 @@
 		}
 		Orbit
 		{
-            referenceBody = Sarvus
+            referenceBody = Sarin
             inclination = 180
             eccentricity = 0.59
             semiMajorAxis = 61121319
@@ -42,8 +42,8 @@
 		{
 			Material
 			{
-				texture = KerbolPlus/SarvusSystem/Moonlets/Textures/S2_color
-				normals = KerbolPlus/SarvusSystem/Moonlets/Textures/S2_normal
+				texture = KerbolPlus/SarinSystem/Moonlets/Textures/S2_color
+				normals = KerbolPlus/SarinSystem/Moonlets/Textures/S2_normal
 				shininess = 0
 				specular = 0,0,0,0
 			}
