--- a/GameData/KerbolPlus/SarinSystem/Pottus/Pottus.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Pottus/Pottus.cfg
@@ -12,7 +12,7 @@
         }
 		Orbit
 		{
-            referenceBody = Sarvus
+            referenceBody = Sarin
             inclination = 0
             eccentricity = 0.04
             semiMajorAxis = 16548698
@@ -24,7 +24,7 @@
 		}
 		Properties
 		{
-            description = This moon appears to be highly affected by it's parent giant. It appears that the insides of this ball of rock is slowly being sucked out of the core, forming a super volcano fuelling Sarvus's atmosphere.
+            description = This moon appears to be highly affected by it's parent giant. It appears that the insides of this ball of rock is slowly being sucked out of the core, forming a super volcano fuelling Sarin's atmosphere.
             radius = 240000
             geeASL = 0.24
 			rotationPeriod = 52980.8790593796
@@ -51,8 +51,8 @@
 
 			Material
 			{
-				texture = KerbolPlus/SarvusSystem/Pottus/Textures/Pottus_color
-				normals = KerbolPlus/SarvusSystem/Pottus/Textures/Pottus_normal
+				texture = KerbolPlus/SarinSystem/Pottus/Textures/Pottus_color
+				normals = KerbolPlus/SarinSystem/Pottus/Textures/Pottus_normal
 				shininess = 0
 				specular = 0,0,0,0
 
@@ -137,7 +137,7 @@
 			{
 				VertexHeightMap
 				{
-					map = KerbolPlus/SarvusSystem/Pottus/PluginData/Pottus_height.dds
+					map = KerbolPlus/SarinSystem/Pottus/PluginData/Pottus_height.dds
 					offset = 1600
 					deformity = 9000.0
 					scaleDeformityByRadius = false
