--- a/GameData/KerbolPlus/SarinSystem/Sarin/Sarin.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Sarin/Sarin.cfg
@@ -2,8 +2,8 @@
 {
     Body
     {
-        name = Sarvus
-		cacheFile = KerbolPlus/Cache/Sarvus.bin
+        name = Sarin
+		cacheFile = KerbolPlus/Cache/Sarin.bin
 		Template
 		{
 			name = Jool
@@ -51,7 +51,7 @@
 
             Material
             {
-                texture = KerbolPlus/SarvusSystem/Sarvus/Textures/Sarvus_color
+                texture = KerbolPlus/SarinSystem/Sarin/Textures/Sarin_color
                 shininess = 0.1
                 specular = 0.2,0.2,0.2,1.0
 
