--- a/GameData/KerbolPlus/SarinSystem/Moonlets/S3.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Moonlets/S3.cfg
@@ -3,8 +3,8 @@
     Body
     {
 		//name approximately from https://goo.gl/tz9xZf
-		name = S/0-S4
-		cacheFile = KerbolPlus/Cache/S4.bin
+		name = S/0-S3
+		cacheFile = KerbolPlus/Cache/S3.bin
 		Template
 		{
 			name = Minmus
@@ -12,21 +12,21 @@
 		}
 		Orbit
 		{
-            referenceBody = Sarvus
-            inclination = 49
-            eccentricity = 0.6
-            semiMajorAxis = 199896941
+            referenceBody = Sarin
+            inclination = 9
+            eccentricity = 0.011
+            semiMajorAxis = 199792151
             longitudeOfAscendingNode = 55
             argumentOfPeriapsis = 0
             meanAnomalyAtEpoch = 1.1
             epoch = 1343.91
-            color = 0.27,0.27,0.27,1.0
+            color = 0.27,0.27,0.57,1.0
 		}
 		Properties
 		{
             description = It is thought that this satellite, like the others are captured bodies from separate parts of the galaxy despite their similar appearances. 
-            radius = 20000
-            geeASL = 0.19
+            radius = 18000
+            geeASL = 0.04
 			rotationPeriod = 28255
 			initialRotation = 0
 			ScienceValues
@@ -42,8 +42,8 @@
 		{
 			Material
 			{
-				texture = KerbolPlus/SarvusSystem/Moonlets/Textures/S4_color
-				normals = KerbolPlus/SarvusSystem/Moonlets/Textures/S4_normal
+				texture = KerbolPlus/SarinSystem/Moonlets/Textures/S3_color
+				normals = KerbolPlus/SarinSystem/Moonlets/Textures/S3_normal
 				shininess = 0
 				specular = 0,0,0,0
 			}
@@ -106,7 +106,7 @@
 						LandClass
 						{
 							name = Beach
-							baseColor = 0.3105618, 0.3105618, 0.3105618, 1.000
+							baseColor = 0.2874157, 0.3105618, 0.835719, 1.000
 							colorNoise = 0.2303371, 0.250, 0.230, 1.000
 							colorNoiseAmount = 0.600000002980232
 							SimplexNoiseMap
@@ -171,7 +171,7 @@
 					oceanLevel = 0
 					oceanSnap = false
 					oceanStep = 0
-					seed = 637
+					seed = 418
 					terrainRidgeBalance = 0.1
 					terrainRidgesMax = 1
 					terrainRidgesMin = 0.4
