--- a/GameData/KerbolPlus/DwarfPlanets/Corolet/Corolet.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Corolet/Corolet.cfg
@@ -27,6 +27,30 @@
             geeASL = 0.24
 			rotationPeriod = 46134.589375
 			initialRotation = 0			
+
+			biomeMap = KerbolPlus/DwarfPlanets/Corolet/PluginData/Corolet_biome.dds
+
+            Biomes
+            {
+                Biome
+                {
+                    name = Basin
+                    value = 1.0
+                    color = 0,0,0,1
+                }
+                Biome
+                {
+                    name = Jagged Slopes
+                    value = 1.0
+                    color = 1,0,0,1
+                }
+                Biome
+                {
+                    name = Flat Tops
+                    value = 1.0
+                    color = 0,1,0,1
+                }
+			}				
 			ScienceValues
 			{
 				landedDataValue = 20
