--- a/GameData/KerbolPlus/DwarfPlanets/Harvest/Harvest.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Harvest/Harvest.cfg
@@ -33,6 +33,41 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
+			biomeMap = KerbolPlus/DwarfPlanets/Harvest/PluginData/Harvest_biome.dds
+
+            Biomes
+            {
+                Biome
+                {
+                    name = Depths
+                    value = 1.0
+                    color = 0,0,0,1
+                }
+                Biome
+                {
+                    name = Pale Lowlands
+                    value = 1.0
+                    color = 1,0,0,1
+                }
+                Biome
+                {
+                    name = Murky Midlands
+                    value = 1.0
+                    color = 0,1,0,1
+                }
+                Biome
+                {
+                    name = Lesser Highlands
+                    value = 1.0
+                    color = 0,0,1,1
+                }
+                Biome
+                {
+                    name = Peaks
+                    value = 1.0
+                    color = 1,1,0,1
+                }
+			}				
 			ScienceValues
 			{
 				landedDataValue = 3
