--- a/GameData/KerbolPlus/DwarfPlanets/Kralaus/Kralaus.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Kralaus/Kralaus.cfg
@@ -33,6 +33,41 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
+			biomeMap = KerbolPlus/DwarfPlanets/Kralaus/PluginData/Kralaus_biome.dds
+
+            Biomes
+            {
+                Biome
+                {
+                    name = Lower Dirtlands
+                    value = 1.0
+                    color = 0,0,0,1
+                }
+                Biome
+                {
+                    name = Muddy Slopes
+                    value = 1.0
+                    color = 1,0,0,1
+                }
+                Biome
+                {
+                    name = Lower Redlands
+                    value = 1.0
+                    color = 0,1,0,1
+                }
+                Biome
+                {
+                    name = Higher Red Slopes
+                    value = 1.0
+                    color = 0,0,1,1
+                }
+                Biome
+                {
+                    name = Red Peaks
+                    value = 1.0
+                    color = 1,1,0,1
+                }
+			}				
 			ScienceValues
 			{
 				landedDataValue = 12
