--- a/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Pergas/Pergas.cfg
@@ -34,6 +34,35 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
+			biomeMap = KerbolPlus/DwarfPlanets/Pergas/PluginData/Pergas_biome.dds
+
+            Biomes
+            {
+                Biome
+                {
+                    name = Deep Bluelands
+                    value = 1.0
+                    color = 0,0,0,1
+                }
+                Biome
+                {
+                    name = Lower Bluelands
+                    value = 1.0
+                    color = 1,0,0,1
+                }
+                Biome
+                {
+                    name = Bare Rock
+                    value = 1.0
+                    color = 0,1,0,1
+                }
+                Biome
+                {
+                    name = Icy Peaks
+                    value = 1.0
+                    color = 0,0,1,1
+                }
+			}				
 			ScienceValues
 			{
 				flyingLowDataValue = 8
