--- a/GameData/KerbolPlus/SarinSystem/Moonlets/S4.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Moonlets/S4.cfg
@@ -29,6 +29,30 @@
             geeASL = 0.19
 			rotationPeriod = 28255
 			initialRotation = 0
+
+			biomeMap = KerbolPlus/SarinSystem/Moonlets/PluginData/S4_biome.dds
+
+            Biomes
+            {
+                Biome
+                {
+                    name = Colored Lands
+                    value = 1.0
+                    color = 0,0,0,1
+                }
+                Biome
+                {
+                    name = Slopes
+                    value = 1.0
+                    color = 1,0,0,1
+                }
+                Biome
+                {
+                    name = Rocky Highlands
+                    value = 1.0
+                    color = 0,1,0,1
+                }
+			}				
 			ScienceValues
 			{
 				landedDataValue = 13
