--- a/GameData/KerbolPlus/DwarfPlanets/Valit/Valit.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Valit/Valit.cfg
@@ -33,6 +33,41 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
+			biomeMap = KerbolPlus/DwarfPlanets/Valit/PluginData/Valit_biome.dds
+
+            Biomes
+            {
+                Biome
+                {
+                    name = Darklands
+                    value = 1.0
+                    color = 0,0,0,1
+                }
+                Biome
+                {
+                    name = Oxidised Sands
+                    value = 1.0
+                    color = 1,0,0,1
+                }
+                Biome
+                {
+                    name = Pale Midlands
+                    value = 1.0
+                    color = 0,1,0,1
+                }
+                Biome
+                {
+                    name = Orange Ground
+                    value = 1.0
+                    color = 0,0,1,1
+                }
+                Biome
+                {
+                    name = Peaks
+                    value = 1.0
+                    color = 1,1,0,1
+                }
+			}				
 			ScienceValues
 			{
 				landedDataValue = 5
