--- a/GameData/KerbolPlus/SarinSystem/Daphne/Daphne.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Daphne/Daphne.cfg
@@ -33,6 +33,47 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
+			biomeMap = KerbolPlus/SarinSystem/Daphne/PluginData/Daphne_biome.dds
+
+            Biomes
+            {
+                Biome
+                {
+                    name = Ice Sheets
+                    value = 1.0
+                    color = 0,0,0,1
+                }
+                Biome
+                {
+                    name = Lower Slopes
+                    value = 1.0
+                    color = 1,0,0,1
+                }
+                Biome
+                {
+                    name = Dark Ice
+                    value = 1.0
+                    color = 0,1,0,1
+                }
+                Biome
+                {
+                    name = Blue Ice
+                    value = 1.0
+                    color = 0,0,1,1
+                }
+                Biome
+                {
+                    name = Icy Peaks
+                    value = 1.0
+                    color = 1,1,0,1
+                }
+                Biome
+                {
+                    name = Fragmented Canyons
+                    value = 1.0
+                    color = 1,0,1,1
+                }
+			}				
 			ScienceValues
 			{
 				landedDataValue = 14
