--- a/GameData/KerbolPlus/SarinSystem/Pottus/Pottus.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Pottus/Pottus.cfg
@@ -34,6 +34,53 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
+			biomeMap = KerbolPlus/SarinSystem/Pottus/PluginData/Pottus_biome.dds
+
+            Biomes
+            {
+                Biome
+                {
+                    name = Depths
+                    value = 1.0
+                    color = 0,0,0,1
+                }
+                Biome
+                {
+                    name = Dark Slopes
+                    value = 1.0
+                    color = 1,0,0,1
+                }
+                Biome
+                {
+                    name = Bluelands
+                    value = 1.0
+                    color = 0,1,0,1
+                }
+                Biome
+                {
+                    name = Lower Rocky Slopes
+                    value = 1.0
+                    color = 0,0,1,1
+                }
+                Biome
+                {
+                    name = Upper Rocky Slopes
+                    value = 1.0
+                    color = 1,1,0,1
+                }
+                Biome
+                {
+                    name = Icy Peaks
+                    value = 1.0
+                    color = 1,0,1,1
+                }
+                Biome
+                {
+                    name = Super Volcano
+                    value = 1.0
+                    color = 0,1,1,1
+                }
+			}				
 			ScienceValues
 			{
 				landedDataValue = 14
