--- a/GameData/KerbolPlus/SarinSystem/Sarin/Sarin.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Sarin/Sarin.cfg
@@ -32,7 +32,30 @@
             isHomeWorld = false
             timewarpAltitudeLimits = 0 265000 285000 300000 320000 320000 600000 800000
 
-            ScienceValues
+			biomeMap = KerbolPlus/SarinSystem/Sarin/PluginData/Sarin_biome.dds
+
+            Biomes
+            {
+                Biome
+                {
+                    name = Dark Storms
+                    value = 1.0
+                    color = 0,0,0,1
+                }
+                Biome
+                {
+                    name = Pale Bands
+                    value = 1.0
+                    color = 1,0,0,1
+                }
+                Biome
+                {
+                    name = Lightlands
+                    value = 1.0
+                    color = 0,1,0,1
+                }
+			}				
+			ScienceValues
             {
 				flyingLowDataValue = 16
 				flyingHighDataValue = 15
