--- a/GameData/KerbolPlus/SarinSystem/Shay/Shay.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Shay/Shay.cfg
@@ -33,6 +33,47 @@
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 30000 30000 60000 100000 300000 600000 800000
 
+			biomeMap = KerbolPlus/SarinSystem/Shay/PluginData/Shay_biome.dds
+
+            Biomes
+            {
+                Biome
+                {
+                    name = Lower Rockbeds
+                    value = 1.0
+                    color = 0,0,0,1
+                }
+                Biome
+                {
+                    name = Upper Rockbeds
+                    value = 1.0
+                    color = 1,0,0,1
+                }
+                Biome
+                {
+                    name = Lower Icesheets
+                    value = 1.0
+                    color = 0,1,0,1
+                }
+                Biome
+                {
+                    name = Dark Ice
+                    value = 1.0
+                    color = 0,0,1,1
+                }
+                Biome
+                {
+                    name = Dark Slopes
+                    value = 1.0
+                    color = 1,1,0,1
+                }
+                Biome
+                {
+                    name = Upper Icesheets
+                    value = 1.0
+                    color = 1,0,1,1
+                }
+			}				
 			ScienceValues
 			{
 				landedDataValue = 14
