--- a/GameData/KerbolPlus/DwarfPlanets/Corolet/Corolet.cfg
+++ b/GameData/KerbolPlus/DwarfPlanets/Corolet/Corolet.cfg
@@ -26,7 +26,8 @@
             radius = 6000
             geeASL = 0.24
 			rotationPeriod = 46134.589375
-			initialRotation = 0			
+			initialRotation = 0
+			timewarpAltitudeLimits = 0 5000 7500 10000 15000 50000 200000 500000
 
 			biomeMap = KerbolPlus/DwarfPlanets/Corolet/PluginData/Corolet_biome.dds
 
