--- a/GameData/KerbolPlus/SarinSystem/Moonlets/S1.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Moonlets/S1.cfg
@@ -29,6 +29,7 @@
             geeASL = 0.09
 			rotationPeriod = 28255
 			initialRotation = 0		
+			timewarpAltitudeLimits = 0 5000 7500 10000 15000 50000 200000 500000
 
 			biomeMap = KerbolPlus/SarinSystem/Moonlets/PluginData/S1_biome.dds
 
