--- a/GameData/KerbolPlus/SarinSystem/Moonlets/S2.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Moonlets/S2.cfg
@@ -28,7 +28,8 @@
             radius = 22000
             geeASL = 0.07
 			rotationPeriod = 28255
-			initialRotation = 0			
+			initialRotation = 0		
+			timewarpAltitudeLimits = 0 5000 7500 10000 15000 50000 200000 500000
 
 			biomeMap = KerbolPlus/SarinSystem/Moonlets/PluginData/S2_biome.dds
 
