--- a/GameData/KerbolPlus/SarinSystem/Sarin/Sarin.cfg
+++ b/GameData/KerbolPlus/SarinSystem/Sarin/Sarin.cfg
@@ -30,7 +30,7 @@
             tidallyLocked = false
             initialRotation = 0
             isHomeWorld = false
-            timewarpAltitudeLimits = 0 265000 285000 300000 320000 320000 600000 800000
+            timewarpAltitudeLimits = 0 220000 225000 250000 300000 400000 600000 1200000
 
 			biomeMap = KerbolPlus/SarinSystem/Sarin/PluginData/Sarin_biome.dds
 
