--- a/GameData/KPlus/DwarfPlanets/Corolet/Corolet.cfg
+++ b/GameData/KPlus/DwarfPlanets/Corolet/Corolet.cfg
@@ -1,11 +1,7 @@
-@Kopernicus:AFTER[Kopernicus]
+@Kopernicus:AFTER[Kopernicus]:NEEDS[!KerbolPlus]
 {
     Body
     {
-		Debug
-		{
-			export = false
-		}
 		name = Corolet
 		cacheFile = KPlus/Cache/Corolet.bin
 		Template
